<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.ContactDetailsFragment">

    <data>

        <variable
            name="viewModel"
            type="com.big0soft.nearexpireadmin.ui.viewmodel.ContactDetailsViewModel" />

        <variable name="contactInfo"
            type="com.big0soft.nearexpireadmin.data.requests.ContactDetailsRequest"/>

        <import type="com.big0soft.nearexpireadmin.domain.enums.Status" />

        <import type="android.view.View" />

        <import type="com.big0soft.nearexpireadmin.data.validation.ValidateResult" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentContactDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/fragmentContactDetailsTitleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias=".2"

                    >

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_input_frome"
                        android:textAppearance="@style/TextAppearance.Material3.TitleSmall" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentContactDetailsPhoneInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"

                    android:_resError="@{viewModel.phoneValidationResultLiveData.message}"
                    android:hint="@string/phone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentContactDetailsTitleLayout"
                    app:startIconDrawable="@drawable/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentContactDetailsPhoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{contactInfo.phone}"
                        android:inputType="phone"
                        android:afterTextChanged="@{(edit)->viewModel.setPhoneValidationResultLiveData(ValidateResult.progressResult)}"
                        android:maxLength="50" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentContactDetailsWhatsAppInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/whats_app"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:_resError="@{viewModel.whatsappValidationResultLiveData.message}"

                    app:layout_constraintTop_toBottomOf="@id/fragmentContactDetailsPhoneInputLayout"
                    app:startIconDrawable="@drawable/logo_whatsapp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentContactDetailsWhatsAppEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"

                        android:text="@{contactInfo.whatsapp}"
                        android:afterTextChanged="@{(edit)->viewModel.setWhatsppValidationResultLiveData(ValidateResult.progressResult)}"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragmentContactDetailsEmailInputLayout"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:hint="@string/email"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:_resError="@{viewModel.emailValidationResultLiveData.message}"

                    app:layout_constraintTop_toBottomOf="@id/fragmentContactDetailsWhatsAppInputLayout"
                    app:startIconDrawable="@drawable/mail">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fragmentContactDetailsEmailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{contactInfo.email}"
                        android:afterTextChanged="@{(edit)->viewModel.setEmailValidationResultLiveData(ValidateResult.progressResult)}"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragmentContactDetailsSubmitBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/submit"
                    app:cornerRadius="@dimen/_4sdp"
                    app:icon="@drawable/send"
                    app:iconGravity="textStart"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fragmentContactDetailsEmailInputLayout" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>