...
    <string name="sub_category">Subcategory:</string>
    <string name="category">Category</string>
    <string name="delivery_availability">Delivery Availability</string>
    <string name="edit_product_details">Edit Product Details</string>

    <string name="invalid_provider">Your Email or Phone Are Invalid </string>
    <string name="empty_filed">Require Field</string>
    <string name="no_user_found">User not found</string>
    <string name="login_successful">Login Successful</string>
    <string name="register_fragment_label">Register</string>
    <string name="loginfragment">Login</string>
    <string name="image_required">Pleas Upload Image Logo !</string>
    <string name="image_background_required">Please Upload Image for Background !</string>
...
    <string name="order_status_label">Order Status</string>
    <string name="order_date_label">Order Date:</string>
    <string name="ordered_products">Ordered Products</string>
    <string name="quantity_label">Quantity:</string>
    <string name="price_label">price:</string>
    <string name="logo_image_required">Please Select Logo</string>
    <string name="invalid_phone">Please Enter An valid Phone Number !</string>
    <string-array name="store_registration_steps">
        <item>Store Setup</item>
        <item>Location Details</item>
        <item>Contact Details </item>
        <item>Verification </item>
    </string-array>
...
