<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/fragmentStoreSetup2"
        android:title="@string/setup" />


    <item
        android:id="@+id/fragmentLocationDetails2"
        android:title="@string/location" />

    <item
        android:id="@+id/fragmentContactDetails2"
        android:title="@string/contact" />

    <item
        android:id="@+id/fragmentVerification2"
        android:title="@string/verification" />
</menu>