...

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragmentVerification"
        >



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragmentVerificationTitlTv"
...
